# TicTacToe

./: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml  tic.cabal
app/: Main.hs
src/: Ai.hs  TicLib.hs
test/: Spec.hs
